# terrai-spatial-intelligence

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.en.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  DATA_SOURCES.en.md  DATA_SOURCES.ja.md  DATA_SOURCES.md  README.en.md  README.ja.md  README.md  REFACTOR_DECISIONS.en.md  REFACTOR_DECISIONS.ja.md  REFACTOR_DECISIONS.md  REMOTE_SENSING_PLAN.en.md  REMOTE_SENSING_PLAN.ja.md  REMOTE_SENSING_PLAN.md  app.js  audit.js  i18n.js  index.html  pyproject.toml  styles.css
architecture/: README.en.md  README.ja.md  README.md
docs/: README.en.md  README.ja.md  README.md
frontend/: app.js  audit.js  i18n.js  index.html  styles.css
scripts/: __init__.py  bootstrap_packaged_data.py  build_ci_fixture.py  build_ci_fixture_test.py  build_joint_analysis.py  build_mlit_fixture.py  build_mlit_fixture_test.py  build_multiscale_evidence.py  build_multiscale_evidence_test.py  build_spatial_store.py  build_underground_scenes.py  build_underground_scenes_test.py  ensure_data.py  fetch_fgd_kanto_buildings.py  fetch_fgd_kanto_buildings_test.py  fetch_google_satellite_embedding.py  fetch_gsi_evacuation.py  fetch_gsi_evacuation_test.py  fetch_mlit_foundation.py  fetch_mlit_foundation_test.py  fetch_mlit_foundation_wide.py  fetch_mlit_foundation_wide_test.py  fetch_mlit_river.py  fetch_osm_kanto_buildings.py  fetch_osm_kanto_buildings_test.py  fetch_osm_sapporo_underground.py  fetch_osm_sapporo_underground_test.py  fetch_plateau_kanto_buildings.py  fetch_plateau_kanto_buildings_test.py  fetch_plateau_uc24_13.py  fetch_plateau_uc24_13_test.py  fetch_plateau_uc24_16.py  fetch_plateau_uc24_16_test.py  fetch_tepco_grid.py  fetch_tepco_grid_test.py  fetch_visual_tiles.py  merge_kanto_buildings.py  merge_kanto_buildings_test.py  parse_tepco_grid.py  refresh_gsi_style.py  (+1 more)
terrai_spatial/: __init__.py  __main__.py  api.py  api_test.py  cli.py  cli_test.py  data_service.py  data_service_identity_test.py  data_service_test.py  data_tasks.py  data_tasks_test.py  store.py  store_test.py
tests/: test_concept_architecture.py  test_data_tasks.py  (+2 more)
(+385 files in other folders)
