[project]
name = "terrai-spatial-demo"
version = "0.3.0"
description = "Auditable multilingual TerrAI spatial intelligence exhibition with a FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn>=0.35,<1",
]

[project.optional-dependencies]
remote = [
  "numpy>=2.0",
  "pillow>=10.0",
  "pyproj>=3.6",
  "rasterio>=1.3",
]

[tool.uv]
package = false
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["terrai_spatial", "scripts"]
python_files = ["*_test.py"]
