[project]
name = "terrai-spatial-demo"
version = "0.3.0"
description = "Auditable multilingual TerrAI spatial intelligence exhibition with a FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116, <1",
    "uvicorn>=0.35, <1",
    # Geospatial stack for the data pipelines. Installed by default: the
    # alternative was a service that installed its own pipeline dependencies
    # mid-startup whenever an output went missing.
    "fiona>=1.10.1",
    "numpy>=2.0",
    "pillow>=12.3.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "osmium>=4.3.1",
    # Spatial predicates for the OSM+FGD building merge (STRtree overlap test).
    "shapely>=2.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

[dependency-groups]
dev = ["pytest>=9.1.1", "ruff>=0.15.22"]

[tool.pytest.ini_options]
testpaths = ["terrai_spatial", "scripts"]
python_files = ["*_test.py"]
